compiler/testData/multiplatform/classScopes/missingFunction/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingFunction/jvm.kt:1:12: error: 'impl' class 'Foo' has no corresponding 'header' declaration
The following declaration is incompatible because some members are not implemented:
    public final header class Foo
No implementations are found for members listed below:

    public final header fun function(s: String): Unit

impl class Foo
           ^
